# mcp-server-flomo-python

./: .gitignore  README.md  flomo_cli.py  flomo_server.py  flomo_web_server.py  install.sh  main.py  pyproject.toml  requirements.txt  server_log.txt  setup.py  simple_server.py
examples/: README.md
src/: __init__.py
src/cli/: __init__.py  __main__.py  commands.py
src/server/: __init__.py  __main__.py  app.py
src/utils/: __init__.py  config.py  flomo_client.py
